--- a/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
+++ b/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
   </ItemGroup>
   <PropertyGroup>
-    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">C:\Deploy\Plugins\</TPDeployPath>
+    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">..\..\Plugins\</TPDeployPath>
     <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">$(SolutionDir)Deploy/Plugins/</TPDeployPath>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
