--- a/Development/TomPIT.Templates.Application/TomPIT.MicroServices.csproj
+++ b/Development/TomPIT.Templates.Application/TomPIT.MicroServices.csproj
@@ -32,7 +32,7 @@
     <Exec Command="$(CopyCommand) &quot;$(TargetPath)&quot; &quot;$(TPDeployPath)TomPIT.MicroServices&quot;" />
   </Target>
   <PropertyGroup>
-    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">C:\Deploy\Plugins\</TPDeployPath>
+    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">..\..\Plugins\</TPDeployPath>
     <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">$(SolutionDir)Deploy/Plugins/</TPDeployPath>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
