--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
@@ -44,7 +44,7 @@
     </Content>
   </ItemGroup>
   <PropertyGroup>
-    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">C:\Deploy\Plugins\</TPDeployPath>
+    <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$(OS)' == 'Windows_NT'">..\..\Plugins\</TPDeployPath>
     <TPDeployPath Condition="'$(TPDeployPath)' == '' AND '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">$(SolutionDir)Deploy/Plugins/</TPDeployPath>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
