--- a/Core/TomPIT.Core/TomPIT.Core.csproj
+++ b/Core/TomPIT.Core/TomPIT.Core.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="System.Diagnostics.EventLog" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Claims.Designer.cs">
