--- a/App/TomPIT.App.UI/bundleconfig.json
+++ b/App/TomPIT.App.UI/bundleconfig.json
@@ -1,10 +1,10 @@
 ﻿[
   {
-    "outputFileName": "wwwroot/assets/styles.min.css",
+    "outputFileName": "wwwroot/Assets/Styles.min.css",
     "inputFiles": [
-      "wwwroot/assets/fonts/opensans/opensans.css",
-      "wwwroot/assets/styles/bootstrap/bootstrap.css",
-      "wwwroot/assets/styles/tompitapp.css"
+      "wwwroot/Assets/Fonts/OpenSans/opensans.css",
+      "wwwroot/Assets/Styles/bootstrap/bootstrap.css",
+      "wwwroot/Assets/Styles/tompitapp.css"
     ],
     "minify": {
       "enabled": true,
@@ -13,10 +13,10 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/dx.css",
+    "outputFileName": "wwwroot/Assets/dx.css",
     "inputFiles": [
-      "wwwroot/assets/Libraries/DevExtreme/Latest/dx.common.css",
-      "wwwroot/assets/Libraries/DevExtreme/Latest/dx.material.blue.light.css"
+      "wwwroot/Assets/Libraries/DevExtreme/Latest/dx.common.css",
+      "wwwroot/Assets/Libraries/DevExtreme/Latest/dx.material.blue.light.css"
     ],
     "minify": {
       "enabled": true,
@@ -25,9 +25,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/quill.snow.min.css",
+    "outputFileName": "wwwroot/Assets/quill.snow.min.css",
     "inputFiles": [
-      "wwwroot/assets/Libraries/Quill/quill.snow.css"
+      "wwwroot/Assets/Libraries/Quill/quill.snow.css"
     ],
     "minify": {
       "enabled": true
@@ -35,9 +35,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/quill.bubble.min.css",
+    "outputFileName": "wwwroot/Assets/quill.bubble.min.css",
     "inputFiles": [
-      "wwwroot/assets/Libraries/Quill/quill.bubble.css"
+      "wwwroot/Assets/Libraries/Quill/quill.bubble.css"
     ],
     "minify": {
       "enabled": true
@@ -45,24 +45,24 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/scripts.min.js",
+    "outputFileName": "wwwroot/Assets/Scripts.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/jquery.js",
-      "wwwroot/assets/scripts/tether.js",
-      "wwwroot/assets/scripts/popper.js",
-      "wwwroot/assets/scripts/tooltip.js",
-      "wwwroot/assets/scripts/bootstrap.js",
-      "wwwroot/assets/scripts/jquery-ui-1.12.1.js",
-      "wwwroot/assets/scripts/ajax.js",
-      "wwwroot/assets/scripts/progress.js",
-      "wwwroot/assets/scripts/toastr.js",
-      "wwwroot/assets/scripts/tompit.js",
-      "wwwroot/assets/scripts/runtime.js",
-      "wwwroot/assets/scripts/timer.js",
-      "wwwroot/assets/scripts/jscroll.js",
-      "wwwroot/assets/scripts/moment.js",
-      "wwwroot/assets/scripts/jquery.number.js",
-      "wwwroot/assets/scripts/form.js"
+      "wwwroot/Assets/Scripts/jquery.js",
+      "wwwroot/Assets/Scripts/tether.js",
+      "wwwroot/Assets/Scripts/popper.js",
+      "wwwroot/Assets/Scripts/tooltip.js",
+      "wwwroot/Assets/Scripts/bootstrap.js",
+      "wwwroot/Assets/Scripts/jquery-ui-1.12.1.js",
+      "wwwroot/Assets/Scripts/ajax.js",
+      "wwwroot/Assets/Scripts/progress.js",
+      "wwwroot/Assets/Scripts/toastr.js",
+      "wwwroot/Assets/Scripts/tompit.js",
+      "wwwroot/Assets/Scripts/runtime.js",
+      "wwwroot/Assets/Scripts/timer.js",
+      "wwwroot/Assets/Scripts/jscroll.js",
+      "wwwroot/Assets/Scripts/moment.js",
+      "wwwroot/Assets/Scripts/jquery.number.js",
+      "wwwroot/Assets/Scripts/form.js"
     ],
     "minify": {
       "enabled": false,
@@ -71,9 +71,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/fonts.min.js",
+    "outputFileName": "wwwroot/Assets/fonts.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/fontawesome-all.js"
+      "wwwroot/Assets/Scripts/fontawesome-all.js"
     ],
     "minify": {
       "enabled": true,
@@ -82,9 +82,9 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/scripts.foot.min.js",
+    "outputFileName": "wwwroot/Assets/Scripts.foot.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/foot.js"
+      "wwwroot/Assets/Scripts/foot.js"
     ],
     "minify": {
       "enabled": true,
@@ -93,11 +93,11 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/messaging.min.js",
+    "outputFileName": "wwwroot/Assets/messaging.min.js",
     "inputFiles": [
-      "wwwroot/assets/scripts/signalr.js",
-      "wwwroot/assets/scripts/iot.js",
-      "wwwroot/assets/scripts/dataHub.js"
+      "wwwroot/Assets/Scripts/signalr.js",
+      "wwwroot/Assets/Scripts/iot.js",
+      "wwwroot/Assets/Scripts/dataHub.js"
     ],
     "minify": {
       "enabled": false,
@@ -106,22 +106,22 @@
     "sourceMap": false
   },
   {
-    "outputFileName": "wwwroot/assets/globalize.min.js",
+    "outputFileName": "wwwroot/Assets/globalize.min.js",
     "inputFiles": [
-      "wwwroot/assets/libraries/cldr/0.5.1/cldr.js",
-      "wwwroot/assets/libraries/cldr/0.5.1/cldr/event.js",
-      "wwwroot/assets/libraries/cldr/0.5.1/cldr/supplemental.js",
-      "wwwroot/assets/libraries/cldr/0.5.1/cldr/unresolved.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/currency.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/message.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/number.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/date.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/plural.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/relative-time.js",
-      "wwwroot/assets/libraries/globalize/1.4.2/globalize/unit.js",
-      "wwwroot/assets/libraries/moment/2.23.0/moment.js",
-      "wwwroot/assets/libraries/Numeral/2.0.6/numeral.js"
+      "wwwroot/Assets/Libraries/Cldr/0.5.1/cldr.js",
+      "wwwroot/Assets/Libraries/Cldr/0.5.1/Cldr/event.js",
+      "wwwroot/Assets/Libraries/Cldr/0.5.1/Cldr/supplemental.js",
+      "wwwroot/Assets/Libraries/Cldr/0.5.1/Cldr/unresolved.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/globalize.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/currency.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/message.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/number.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/date.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/plural.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/relative-time.js",
+      "wwwroot/Assets/Libraries/Globalize/1.4.2/Globalize/unit.js",
+      "wwwroot/Assets/Libraries/Moment/2.23.0/moment.js",
+      "wwwroot/Assets/Libraries/Numeral/2.0.6/numeral.js"
     ],
     "minify": {
       "enabled": false,
@@ -131,9 +131,9 @@
   },
 
   {
-    "outputFileName": "wwwroot/assets/quill.min.js",
+    "outputFileName": "wwwroot/Assets/quill.min.js",
     "inputFiles": [
-      "wwwroot/assets/libraries/Quill/quill.min.js"
+      "wwwroot/Assets/Libraries/Quill/quill.min.js"
     ],
     "minify": {
       "enabled": false,
