--- a/DataProviders/TomPIT.DataProviders.BigData/TomPIT.DataProviders.BigData.csproj
+++ b/DataProviders/TomPIT.DataProviders.BigData/TomPIT.DataProviders.BigData.csproj
@@ -9,7 +9,10 @@
     <Version>3.1.505.3</Version>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.DataProviders.BigData&quot;" />
+    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.DataProviders.BigData/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.DataProviders.BigData/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
