--- a/DataProviders/TomPIT.DataProviders.Modbus/TomPIT.DataProviders.Modbus.csproj
+++ b/DataProviders/TomPIT.DataProviders.Modbus/TomPIT.DataProviders.Modbus.csproj
@@ -9,7 +9,10 @@
     <Version>3.1.505.3</Version>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.DataProviders.Modbus&quot;" />
+    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.DataProviders.Modbus/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.DataProviders.Modbus/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
