--- a/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
+++ b/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
@@ -25,6 +25,9 @@
     <ProjectReference Include="..\..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.DataProviders.Sql&quot;" />
+    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.DataProviders.Sql/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.DataProviders.Sql/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
 </Project>
