--- a/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
+++ b/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
@@ -17,6 +17,9 @@
     <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.MicroServices.BigData.Design&quot;" />
+    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.BigData.Design/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.BigData.Design/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
 </Project>
