--- a/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
+++ b/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
@@ -17,6 +17,9 @@
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.4" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.MicroServices.BigData&quot;" />
+    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.BigData/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.BigData/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
 </Project>
