--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -45,7 +45,7 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.Scripting.Common" Version="4.6.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.6.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+		<PackageReference Include="System.Security.Cryptography.Pkcs" Version="7.0.0" />
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
 		<PackageReference Include="System.ServiceModel.Primitives" Version="4.10.2" />
