--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
@@ -44,6 +44,9 @@
     </Content>
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.MicroServices.IoT.Design&quot;" />
+   <!--  <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.IoT.Design/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.IoT.Design/&quot;" /> -->
+     <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
 </Project>
