--- a/Development/TomPIT.Templates.IoT/TomPIT.MicroServices.IoT.csproj
+++ b/Development/TomPIT.Templates.IoT/TomPIT.MicroServices.IoT.csproj
@@ -30,6 +30,9 @@
     <ProjectReference Include="..\..\Runtime\TomPIT.Extensions\TomPIT.Extensions.csproj" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.MicroServices.IoT&quot;" />
+     <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.IoT/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.IoT/&quot;" /> -->
+    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
   </Target>
 </Project>
