--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,60 +1,61 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>3.1.505.3</AssemblyVersion>
-    <FileVersion>3.1.505.3</FileVersion>
-    <Version>3.1.505.3</Version>
-  </PropertyGroup>
-  <PropertyGroup>
-    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
-    <AssemblyName>TomPIT.MicroServices.Reporting</AssemblyName>
-    <RootNamespace>TomPIT.MicroServices.Reporting</RootNamespace>
-    <Authors>Tom PIT</Authors>
-    <Company>Tom PIT</Company>
-    <Product>Tom PIT.connected</Product>
-  </PropertyGroup>
-  <ItemGroup>
-    <Content Remove="wwwroot\Assets\reporting.design.min.css" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="bundleconfig.json" />
-    <None Remove="wwwroot\Assets\reporting.design.min.css" />
-    <None Remove="wwwroot\Assets\reporting.design.min.js" />
-    <None Remove="wwwroot\Assets\reporting.min.css" />
-    <None Remove="wwwroot\Assets\reporting.min.js" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="wwwroot\Assets\reporting.design.min.css" />
-    <EmbeddedResource Include="wwwroot\Assets\reporting.design.min.js" />
-    <EmbeddedResource Include="wwwroot\Assets\reporting.min.css" />
-    <EmbeddedResource Include="wwwroot\Assets\reporting.min.js" />
-    <EmbeddedResource Include="wwwroot\Assets\ko.min.js" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="22.2.6" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
-    <PackageReference Include="System.CodeDom" Version="7.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
-    <ProjectReference Include="..\..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="package.json">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>package.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.Reporting/&quot;" />
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+		<AssemblyVersion>3.1.505.3</AssemblyVersion>
+		<FileVersion>3.1.505.3</FileVersion>
+		<Version>3.1.505.3</Version>
+	</PropertyGroup>
+	<PropertyGroup>
+		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+		<AssemblyName>TomPIT.MicroServices.Reporting</AssemblyName>
+		<RootNamespace>TomPIT.MicroServices.Reporting</RootNamespace>
+		<Authors>Tom PIT</Authors>
+		<Company>Tom PIT</Company>
+		<Product>Tom PIT.connected</Product>
+	</PropertyGroup>
+	<ItemGroup>
+		<Content Remove="wwwroot\Assets\reporting.design.min.css" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Remove="bundleconfig.json" />
+		<None Remove="wwwroot\Assets\reporting.design.min.css" />
+		<None Remove="wwwroot\Assets\reporting.design.min.js" />
+		<None Remove="wwwroot\Assets\reporting.min.css" />
+		<None Remove="wwwroot\Assets\reporting.min.js" />
+	</ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="wwwroot\Assets\reporting.design.min.css" />
+		<EmbeddedResource Include="wwwroot\Assets\reporting.design.min.js" />
+		<EmbeddedResource Include="wwwroot\Assets\reporting.min.css" />
+		<EmbeddedResource Include="wwwroot\Assets\reporting.min.js" />
+		<EmbeddedResource Include="wwwroot\Assets\ko.min.js" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DevExpress.AspNetCore.Reporting" Version="22.2.6" />
+		<PackageReference Include="DevExpress.Drawing.Skia" Version="22.2.6" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
+		<PackageReference Include="System.CodeDom" Version="7.0.0" />
+		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
+		<ProjectReference Include="..\..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Update="package.json">
+			<Generator>SettingsSingleFileGenerator</Generator>
+			<LastGenOutput>package.Designer.cs</LastGenOutput>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Properties\" />
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+		<!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.Reporting/&quot;" />
     <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.Reporting/&quot;" /> -->
-    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
-    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
-  </Target>
+		<Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
+		<Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+	</Target>
 </Project>
