--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -32,12 +32,15 @@
 		<EmbeddedResource Include="wwwroot\Assets\ko.min.js" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="DevExpress.AspNetCore.Reporting" Version="22.2.6" />
-		<PackageReference Include="DevExpress.Drawing.Skia" Version="22.2.6" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
 		<PackageReference Include="System.CodeDom" Version="7.0.0" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+		<PackageReference Include="DevExpress.Pdf.SkiaRenderer" Version="22.2.*-*" />
+		<PackageReference Include="DevExpress.AspNetCore.Reporting" Version="22.2.*-*" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
+		<PackageReference Include="DevExpress.Drawing.Skia" Version="22.2.*-*" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
