--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -36,11 +36,11 @@
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
 		<PackageReference Include="System.CodeDom" Version="7.0.0" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
-		<PackageReference Include="DevExpress.Pdf.SkiaRenderer" Version="23.1.2-beta" />
-		<PackageReference Include="DevExpress.AspNetCore.Reporting" Version="23.1.2-beta" />
-		<PackageReference Include="SkiaSharp" Version="2.88.4-preview.66" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.4-preview.66" />
-		<PackageReference Include="DevExpress.Drawing.Skia" Version="23.1.2-beta" />
+		<PackageReference Include="DevExpress.Pdf.SkiaRenderer" Version="23.1.3" />
+		<PackageReference Include="DevExpress.AspNetCore.Reporting" Version="23.1.3" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
+		<PackageReference Include="DevExpress.Drawing.Skia" Version="23.1.3" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
