--- a/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
+++ b/Development/TomPIT.BigData.Design/TomPIT.MicroServices.BigData.Design.csproj
@@ -1,25 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <AssemblyVersion>3.1.505.3</AssemblyVersion>
-    <FileVersion>3.1.505.3</FileVersion>
-    <Version>3.1.505.3</Version>
-    <Authors>Tom PIT</Authors>
-    <Company>Tom PIT</Company>
-    <Product>Tom PIT.connected</Product>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
-    <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
-    <ProjectReference Include="..\TomPIT.BigData\TomPIT.MicroServices.BigData.csproj" />
-    <ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
-    <ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
-    <ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
-  </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.BigData.Design/&quot;" />
-    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.BigData.Design/&quot;" /> -->
-    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
-    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
-  </Target>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<AssemblyVersion>3.1.505.3</AssemblyVersion>
+		<FileVersion>3.1.505.3</FileVersion>
+		<Version>3.1.505.3</Version>
+		<Authors>Tom PIT</Authors>
+		<Company>Tom PIT</Company>
+		<Product>Tom PIT.connected</Product>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
+		<ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
+		<ProjectReference Include="..\TomPIT.BigData\TomPIT.MicroServices.BigData.csproj" />
+		<ProjectReference Include="..\TomPIT.Design\TomPIT.Design.csproj" />
+		<ProjectReference Include="..\TomPIT.Development\TomPIT.Development.csproj" />
+		<ProjectReference Include="..\TomPIT.Ide\TomPIT.Ide.csproj" />
+	</ItemGroup>
+	<Target Name="PostBuildLnx" AfterTargets="PostBuildEvent" Condition="'$(OS)' != 'Windows_NT'">
+		<Exec Command="mkdir -p &quot;/src/plugins/&quot;"  />
+		<Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+	</Target>
+	<Target Name="PostBuildWin" AfterTargets="PostBuildEvent" Condition="'$(OS)' == 'Windows_NT'">
+		<Exec Command="if not exist &quot;c:/src/plugins/&quot; mkdir &quot;c:/src/plugins/&quot;"  />
+		<Exec Command="copy /y &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+	</Target>
 </Project>
