--- a/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
+++ b/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
@@ -16,10 +16,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
   </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.MicroServices.BigData/&quot;" />
-    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.MicroServices.BigData/&quot;" /> -->
-    <Exec Command="mkdir -p &quot;/src/plugins/&quot;" />
-    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
-  </Target>
+	<Target Name="PostBuildLnx" AfterTargets="PostBuildEvent" Condition="'$(OS)' != 'Windows_NT'">
+		<!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.StorageProviders.Azure/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.StorageProviders.Azure/&quot;" /> -->
+		<Exec Command="mkdir -p &quot;/src/plugins/&quot;"  />
+		<Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+	</Target>
+	<Target Name="PostBuildWin" AfterTargets="PostBuildEvent" Condition="'$(OS)' == 'Windows_NT'">
+		<!-- <Exec Command="mkdir -p &quot;/src/plugins/TomPIT.StorageProviders.Azure/&quot;" />
+    <Exec Command="cp &quot;$(TargetPath)&quot; &quot;/src/plugins/TomPIT.StorageProviders.Azure/&quot;" /> -->
+		<Exec Command="if not exist &quot;c:/src/plugins/&quot; mkdir &quot;c:/src/plugins/&quot;"  />
+		<Exec Command="copy /y &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+	</Target>
 </Project>
