Add npm install to reporting build step

--- a/Development/TomPIT.Development.UI/bundleconfig.json
+++ b/Development/TomPIT.Development.UI/bundleconfig.json
@@ -87,7 +87,7 @@
       "wwwroot/Assets/Scripts/jquery.number.js"
     ],
     "minify": {
-      "enabled": false,
+      "enabled": true,
       "renameLocals": false
     },
     "sourceMap": false
