--- a/Reporting/TomPIT.Reporting/package.json
+++ b/Reporting/TomPIT.Reporting/package.json
@@ -1,12 +1,10 @@
 {
   "version": "1.0.0",
-  "name": "Reporting",
+  "name": "reporting",
   "private": true,
   "dependencies": {
-    "@devexpress/analytics-core": "^23.1.3",
-    "cldrjs": "^0.5.0",
-    "devexpress-reporting": "^23.1.3",
-    "devextreme-dist": "^23.1.3",
-    "globalize": "^1.3.0"
+    "devextreme-dist": "23.1.*",
+    "@devexpress/analytics-core": "23.1.*",
+    "devexpress-reporting": "23.1.*"
   }
 }
