Add launch profiles for connected project

--- a/TomPIT.Connected/Properties/launchSettings.json
+++ b/TomPIT.Connected/Properties/launchSettings.json
@@ -1,12 +1,4 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:44003/",
-      "sslPort": 44351
-    }
-  },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -21,7 +13,24 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:44103/"
+      "applicationUrl": "http://localhost:44003/"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "applicationUrl": "http://0.0.0.0:44003",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://0.0.0.0:44003/"
+      },
+      "distributionName": "Debian"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:44003/",
+      "sslPort": 44351
     }
   }
 }
