--- a/Reporting/TomPIT.Reporting.Design/TomPIT.Reporting.Design.csproj
+++ b/Reporting/TomPIT.Reporting.Design/TomPIT.Reporting.Design.csproj
@@ -19,7 +19,8 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
 	</ItemGroup>
 	<ItemGroup>
